--- a/master.html
+++ b/master.html
@@ -757,7 +757,11 @@ pre.rouge {
 <li><a href="#_projects">Projects</a></li>
 </ul>
 </li>
-<li><a href="#pods">Pods</a></li>
+<li><a href="#pods">Pods</a>
+<ul class="sectlevel2">
+<li><a href="#_pod_registry">Pod registry</a></li>
+</ul>
+</li>
 <li><a href="#child_processes">Child processes</a>
 <ul class="sectlevel2">
 <li><a href="#_clojure_java_shell">clojure.java.shell</a></li>
@@ -2299,6 +2303,33 @@ babashka. Documentation is available in the
 <div class="paragraph">
 <p>A list of available pods can be found
 <a href="https://github.com/borkdude/babashka/blob/master/doc/projects.md#pods">here</a>.</p>
+</div>
+<div class="sect2">
+<h3 id="_pod_registry"><a class="link" href="#_pod_registry">Pod registry</a></h3>
+<div class="paragraph">
+<p>Since bb 0.2.6 pods can be obtained via the <a href="https://github.com/babashka/pod-registry">pod-registry</a>.</p>
+</div>
+<div class="paragraph">
+<p>This is an example script which uses
+<a href="https://github.com/retrogradeorbit/bootleg">bootleg</a> as a pod to convert hiccup
+to HTML.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="clojure"><span class="o">#</span><span class="n">!/usr/bin/env</span><span class="w"> </span><span class="n">bb</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">babashka.pods</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">pods</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">pods/load-pod</span><span class="w"> </span><span class="ss">'retrogradeorbit/bootleg</span><span class="w"> </span><span class="s">"0.1.9"</span><span class="p">)</span><span class="w">
+
+</span><span class="p">(</span><span class="nf">require</span><span class="w"> </span><span class="o">'</span><span class="p">[</span><span class="n">pod.retrogradeorbit.bootleg.utils</span><span class="w"> </span><span class="no">:as</span><span class="w"> </span><span class="n">utils</span><span class="p">])</span><span class="w">
+
+</span><span class="p">(</span><span class="nb">-&gt;</span><span class="w"> </span><span class="p">[</span><span class="no">:div</span><span class="w">
+     </span><span class="p">[</span><span class="no">:h1</span><span class="w"> </span><span class="s">"Using Bootleg From Babashka"</span><span class="p">]</span><span class="w">
+     </span><span class="p">[</span><span class="no">:p</span><span class="w"> </span><span class="s">"This is a demo"</span><span class="p">]]</span><span class="w">
+    </span><span class="p">(</span><span class="nf">utils/convert-to</span><span class="w"> </span><span class="no">:html</span><span class="p">))</span></code></pre>
+</div>
+</div>
 </div>
 </div>
 </div>
