--- a/index.html
+++ b/index.html
@@ -1584,8 +1584,9 @@ function.</p>
 namespace which allows dynamically adding to the classpath.</p>
 </div>
 <div class="paragraph">
-<p>See <a href="#deps_clj">deps.clj</a> for a babashka script that replaces the <code>clojure</code>
-bash script.</p>
+<p>The namespace <a href="#babashkadeps">babashka.deps</a> integrates
+<a href="https://github.com/clojure/tools.deps.alpha">tools.deps</a> with babashka and allows
+you to set the classpath using a <code>deps.edn</code> map.</p>
 </div>
 </div>
 <div class="sect2">
